# c-ubuntu

./: LICENSE  README.md  test.py
src/demo1/: CMakeLists.txt  CMakePresets.json  log.cpp  main
src/demo2/: CMakeLists.txt
src/demo3/: CMakeLists.txt  log.h  test.cpp
